fix: adjust z-index values for textarea focus states

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ textarea:focus {
   font-family: arial;
   font-size: 16px;
   color: white;
-  z-index: 1;
+  z-index: 0;
   overflow: hidden;
   border-style: solid;
   border-width: 2px;
@@ -148,7 +148,7 @@ textarea:focus {
   width: 200px;
   height: 60px;
   background: rgba(217, 236, 253, 0.233);
-  z-index: 0;
+  z-index: -1;
   position: absolute;
   top: 0px;
   left: 0px;
